# agentic-ml-platform-data-pipeline

./: README.md
.agent/workflows/: implement-skill-from-spec.md  new-skill.md  skill-test.md  validate-all.md
agent-scaffolding/platform/ml-layer/: global_variables.yaml
agent-scaffolding/skills/architectural-planner/: SKILL.md
platform/: verification_gate.py
platform/ml-layer/: io_config.yaml
platform/serving/: mage_dynamic_block.py  main.py  ssl_termination.conf
skills/architectural-planner/: SKILL.md
skills/data-engineer/: SKILL.md
skills/db-architect/: SKILL.md
skills/deployment-engineer/: SKILL.md
skills/fastapi-pro/assets/: pydantic_base.py  pyproject.toml
skills/fastapi-pro/assets/app/core/: mojo_predictor.py
skills/fastapi-pro/assets/app/routers/: inference.py  system.py
skills/fastapi-pro/assets/docker/: Dockerfile.api  Dockerfile.mage
skills/fastapi-pro/assets/fastapi_project_template/: dependencies.py  main.py
skills/fastapi-pro/assets/fastapi_project_template/routers/: __init__.py  health.py  predictions.py
skills/fastapi-pro/assets/mage_pipeline/custom/: dynamic_training.py
skills/fastapi-pro/assets/mage_pipeline/sensors/: drift_detection.py
skills/fastapi-pro/assets/warehouse/: init.sql
skills/implementation-worker/: SKILL.md
skills/ml-engineer/: SKILL.md
skills/security-auditor/: SKILL.md
specs/: _template.md  backend-architect.md  cloud-architect.md  code-reviewer.md  data-scientist.md  database-optimizer.md  lead-engineer-orchestrator.md  lead-engineer.md  mcp-manager.md  ml-optimizer.md
(+322 files in other folders)
