[tool.poetry]
name = "fastapi-pro-mlops"
version = "1.0.0"
description = "High-concurrency ML inference API with H2O MOJO"
authors = ["FastAPI Pro Agent"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# FastAPI Stack
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"

# Async Database (AD-004: Use asyncpg over psycopg2)
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}

# Redis Async Cache
redis = "^5.0.1"

# H2O Runtime (prefer daimojo for C++ performance)
# daimojo = "^1.0.0"  # Uncomment if available
h2o = "^3.46.0"

# Data Processing
pandas = "^2.1.4"
numpy = "^1.26.3"

# HTTP Client
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
httpx = "^0.26.0"
locust = "^2.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
